<resources>
    <string name="app_name">Meeter</string>
    <string name="action_settings">Settings</string>
    <string name="profile_activity_label">Meeter</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_matches">Matching…</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="matches">Matches</string>
    <string name="does_not_match">Does not match</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="RegistrationActivityTitle">Registration</string>
    <string name="BotNavBarActivityTitle">Bot Navigation</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_events">Events</string>
    <string name="drawer_item_new_event">New event</string>
    <string name="drawer_item_notifications">Notifications</string>
    <string name="drawer_item_additional">Additional</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="create_event">Create event</string>
    <string name="current">Current</string>
    <string name="other">Other</string>
    <string name="today">Today</string>
    <string name="place">Place</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="starts">Starts (yyyy-MM-dd)</string>
    <string name="ends">Ends (yyyy-MM-dd)</string>
    <string name="wrong_date">Wrong date</string>
    <string name="correct_date">Correct date</string>
    <string name="other2">Other</string>
    <string name="simple_bot_nav_bar">Simple bot nav bar</string>
    <string name="try_login">Login</string>
    <string name="user_format">%1$s %2$s, %3$s, %4$s</string>
    <string name="user_about_format">About: %1$s</string>
    <string name="user_about">About:</string>
    <string name="profile_user_id">ID:</string>
    <string name="profile_user_name">User:</string>
    <string name="profile_age">Age:</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_info">Information:</string>
    <string name="profile_user_id_format">ID: %1$s</string>
    <string name="profile_user_name_format">User: %1$s %2$s.</string>
    <string name="profile_age_format">Age: %1$s</string>
    <string name="profile_gender_format">Gender: %1$s</string>
    <string name="profile_info_format">Information: %1$s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="your_gender">Your gender</string>
    <string name="login_failure">Login failed</string>
    <string name="registration_failure">Registration failed</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="ok">OK</string>
    <string-array name="nav_item_activity_titles">
        <item>Profile</item>
        <item>Events</item>
        <item>New event</item>
        <item>Your events</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="starting_time">Starts at (hh:mm)</string>
    <string name="ending_time">Ends at (hh:mm)</string>
    <string name="now">Now</string>
    <string name="on_map">On map</string>
    <string name="listed">Listed</string>
    <string name="your">Your</string>
    <string name="user_information">User information</string>
    <string name="me">Me</string>
    <string name="location_changed">Location changed</string>
    <string name="need_location_permissions">Check permissions for location access.</string>
    <string name="location_is_disabled">Location service is disabled.</string>
    <string name="fill_login_params">Fill login parameters.</string>
    <string name="meeter_account">Meeter</string>
    <string name="check_token">Check token and run.</string>
    <string name="account_created">Account created.</string>
    <string name="server_is_unreachable">Server is unreachable.</string>
    <string name="register_error">Registration error.</string>
    <string name="error">Error</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="common_preferences">Common</string>
    <string name="prefs_need_track_user">prefs_need_track_user</string>
    <string name="track_user">Tracking of your movement is reflected to the map to get actual events. Enable to have a best user experience.</string>
    <string name="track_user_title">Movement tracker</string>
    <string name="prefs_search_area">prefs_search_area</string>
    <string name="search_area">Search area for events on the Map.</string>
    <string name="search_area_title">Search area</string>
    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="remind_for_bed_time">Remind me for bed time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>
    <string name="stream_video">Only stream HD video on Wi-Fi</string>
    <string name="limit_mobile_usage">Limit mobile data usage</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="pref_seek_val">pref_seek_val</string>
    <string name="seconds">seconds</string>
    <string name="uploads">Uploads</string>
    <string-array name="pref_uploads">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <string name="specify_network_prefs">Specify network preferences for uploads</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="restricted_mode">Restricted Mode can help to hide videos with potentially mature content.No filter is 100% accurate, but it should help you to avoid most of this type of content.</string>
    <string name="restricted_mode_description">Restricted Mode</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>
    <string name="basic_preferences">basic preferences</string>
    <string name="summary_basic_preference">summary basic preference</string>
    <string name="title_basic_preference">title basic preference</string>
    <string name="summary_stylish_preference">summary stylish preference</string>
    <string name="title_stylish_preference">title stylish preference</string>
    <string name="summary_icon_preference">summary icon preference</string>
    <string name="title_icon_preference">title icon preference</string>
    <string name="summary_single_line_title_preference">summary single line title preference</string>
    <string name="title_single_line_title_preference">title single line title preference</string>
    <string name="widgets">widgets</string>
    <string name="summary_checkbox_preference">summary checkbox preference</string>
    <string name="title_checkbox_preference">title checkbox preference</string>
    <string name="summary_switch_preference">summary switch preference</string>
    <string name="title_switch_preference">title_switch_preference</string>
    <string name="title_dropdown_preference">title_dropdown_preference</string>
    <string name="title_seekbar_preference">title_seekbar_preference</string>
    <string name="dialogs">dialogs</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="title_list_preference">title_list_preference</string>
    <string name="dialog_title_multi_list_preference">dialog_title_multi_list_preference</string>
    <string name="summary_multi_list_preference">summary_multi_list_preference</string>
    <string name="title_multi_list_preference">title_multi_list_preference</string>
    <string name="advanced_attributes">advanced_attributes</string>
    <string name="summary_expandable_preference">summary_expandable_preference</string>
    <string name="title_expandable_preference">title_expandable_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="title_child_preference">title_child_preference</string>
    <string name="summary_off_toggle_summary_preference">summary_off_toggle_summary_preference</string>
    <string name="summary_on_toggle_summary_preference">summary_on_toggle_summary_preference</string>
    <string name="title_toggle_summary_preference">title_toggle_summary_preference</string>
    <string name="summary_copyable_preference">summary_copyable_preference</string>
    <string name="title_copyable_preference">title_copyable_preference</string>
    <string name="refreshing_the_token">Refreshing the token.</string>
    <string name="event_information">Event information.</string>
    <string name="creator">Creator</string>
    <string name="notification_new_event">New event!</string>
    <string name="delete_event">Delete event</string>
    <string name="are_you_sure_delete_event">Are you sure you want to delete the event?</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="empty_update_request_is_not_sent">Empty update request is not sent.</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="successfully_subscribed">Successfully subscribed.</string>
    <string name="successfully_unsubscribed">Successfully unsubscribed.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribers">Subscribers</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="user_events">User events</string>
    <string name="subscribed">subscribed!</string>
    <string name="new_subscriber">New subscriber!</string>
    <string name="created_event">created event!</string>
    <string name="select_photo">Select photo</string>
    <string name="created">Created</string>
    <string name="starting">Starting</string>
    <string name="select_stating">Select stating</string>
    <string name="ending">Ending</string>
    <string name="select_ending">Select ending</string>
    <string name="position">Position</string>
    <string name="surname">surname</string>
    <string name="birthday">Birthday</string>
    <string name="information">Information</string>
    <string name="ending_date_and_time">Ending date and time</string>
    <string name="starting_date_and_time">Starting date and time</string>
    <string name="mandatory_star">*</string>
    <string name="schedule">Schedule</string>
    <string name="scheduling_event">Scheduling event</string>
</resources>