<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/basic_preferences">

        <Preference
            android:key="preference"
            android:summary="@string/summary_basic_preference"
            android:title="@string/title_basic_preference" />
        <!--preference does not exist in map-->
        <Preference
            android:key="stylized"
            android:summary="@string/summary_stylish_preference"
            android:title="@string/title_stylish_preference" />
        <!--preference does not exist in map-->

        <Preference
            android:icon="@android:drawable/ic_menu_camera"
            android:key="icon"
            android:summary="@string/summary_icon_preference"
            android:title="@string/title_icon_preference" />
        <!--preference does not exist in map-->

        <Preference
            android:key="single_line_title"
            android:summary="@string/summary_single_line_title_preference"
            android:title="@string/title_single_line_title_preference"
            app:singleLineTitle="true" />
        <!--preference does not exist in map-->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/widgets">

        <CheckBoxPreference
            android:key="checkbox"
            android:summary="@string/summary_checkbox_preference"
            android:title="@string/title_checkbox_preference" />

        <SwitchPreferenceCompat
            android:key="switch"
            android:summary="@string/summary_switch_preference"
            android:title="@string/title_switch_preference" />

        <DropDownPreference
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="dropdown"
            android:title="@string/title_dropdown_preference"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:defaultValue="5"
            android:key="seekbar"
            android:max="5000"
            android:title="@string/title_seekbar_preference" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dialogs">

        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:key="edittext"
            android:title="@string/title_edittext_preference"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="list"
            android:title="@string/title_list_preference"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            android:dialogTitle="@string/dialog_title_multi_list_preference"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="multi_select_list"
            android:summary="@string/summary_multi_list_preference"
            android:title="@string/title_multi_list_preference" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced"
        android:title="@string/advanced_attributes"
        app:initialExpandedChildrenCount="1">
        <!--preference does not exist in map-->

        <Preference
            android:key="expandable"
            android:summary="@string/summary_expandable_preference"
            android:title="@string/title_expandable_preference" />
        <!--preference does not exist in map-->

        <Preference
            android:summary="@string/summary_intent_preference"
            android:title="@string/title_intent_preference">
            <!--preference does not exist in map-->

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </Preference>

        <SwitchPreferenceCompat
            android:key="parent"
            android:summary="@string/summary_parent_preference"
            android:title="@string/title_parent_preference" />

        <SwitchPreferenceCompat
            android:dependency="parent"
            android:key="child"
            android:summary="@string/summary_child_preference"
            android:title="@string/title_child_preference" />

        <SwitchPreferenceCompat
            android:key="toggle_summary"
            android:summaryOff="@string/summary_off_toggle_summary_preference"
            android:summaryOn="@string/summary_on_toggle_summary_preference"
            android:title="@string/title_toggle_summary_preference" />

        <Preference
            android:key="copyable"
            android:selectable="false"
            android:summary="@string/summary_copyable_preference"
            android:title="@string/title_copyable_preference"
            app:enableCopying="true" />
        <!--preference does not exist in map-->
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>