<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/registration_camera_btn_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="40dp"
            android:text="@string/camera" />

        <Button
            android:id="@+id/registration_gallery_btn_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_camera_btn_id"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="15dp"
            android:text="@string/gallery" />

        <ImageView
            android:id="@+id/regImageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_below="@+id/registration_gallery_btn_id"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/regNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="38dp"
            android:hint="@string/enter_your_name"
            android:inputType="" />

        <EditText
            android:id="@+id/regSurnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regNameEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_surname" />

        <RadioGroup
            android:id="@+id/regGenderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regSurnameEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="55dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/your_gender" />

            <RadioButton
                android:id="@+id/regRadioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/male_gender" />

            <RadioButton
                android:id="@+id/regRadioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/female_gender" />

        </RadioGroup>

        <EditText
            android:id="@+id/regLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regGenderRadioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="38dp"
            android:hint="@string/login"
            android:inputType="" />

        <EditText
            android:id="@+id/regPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regLoginEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/regRepeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regPasswordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/regMatchesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regRepeatPasswordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/passwords_matches"
            android:inputType="none" />

        <EditText
            android:id="@+id/regInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regMatchesEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="38dp"
            android:hint="@string/enter_your_info"
            android:inputType="" />

        <Button
            android:id="@+id/regRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regInfoEditText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="140dp"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:text="@string/register" />
    </RelativeLayout>

</ScrollView>
