<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Name and description section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background_border"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/scheduling_event"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Dates section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background_border"
                android:orientation="vertical"
                android:padding="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/event_starting_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/starting"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_toEndOf="@+id/event_starting_label"
                        android:layout_height="match_parent"
                        android:text="@string/mandatory_star"
                        android:textColor="@android:color/holo_red_dark" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/starting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/starting_date_and_time"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/select_starting_date_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_stating"
                    android:textAllCaps="false" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/event_ending_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/ending"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_toEndOf="@+id/event_ending_label"
                        android:layout_height="match_parent"
                        android:text="@string/mandatory_star"
                        android:textColor="@android:color/holo_red_dark" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/ending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/ending_date_and_time"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/select_ending_date_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_ending"
                    android:textAllCaps="false" />

            </LinearLayout>
            <!-- Publish Button -->
            <Button
                android:id="@+id/schedule_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/schedule" />
        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
